new title and comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌷 Tulipanes para Eliane</title>
+    <title>🌷 Tulipanes para Eli</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/brython@3.12.0/brython.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/brython@3.12.0/brython_stdlib.js"></script>
@@ -617,7 +617,7 @@
     
     <!-- Créditos -->
     <div style="text-align: center; margin-top: 30px; padding: 20px; color: rgba(255, 255, 255, 0.7); font-family: 'Outfit', sans-serif; font-size: 14px;">
-        by <a href="https://github.com/Sandreke" target="_blank" style="color: rgba(255, 255, 255, 0.7); text-decoration: none; font-weight: bold;">Hecho por Christian, con mucho amor</a>
+        by <a href="https://github.com/Sandreke" target="_blank" style="color: rgba(255, 255, 255, 0.7); text-decoration: none; font-weight: bold;">Christian, con mucho amor</a>
     </div>
 </body>
 </html>
