--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 </head>
 <body onload="brython()">
     <div class="container">
-        <h1>🌷 Tulipanes para Becca</h1>
+        <h1>🌷 Tulipanes para Eli</h1>
         
         <div class="controls">
             <button class="btn btn-primary" onclick="startDrawing()">👨‍🎨 Dibujar</button>
