--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌷 Tulipanes para Eli</title>
+    <title>🌷 Tulipanes para Eli 💚</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/brython@3.12.0/brython.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/brython@3.12.0/brython_stdlib.js"></script>
@@ -414,7 +414,7 @@
 </head>
 <body onload="brython()">
     <div class="container">
-        <h1>🌷 Tulipanes para Eli</h1>
+        <h1>🌷 Tulipanes para Eli 💚</h1>
         
         <div class="controls">
             <button class="btn btn-primary" onclick="startDrawing()">👨‍🎨 Dibujar</button>
